# natocr

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml  test.yml
api/: index.html
cli/: index.html
docs/: api.md  cli.md  index.md  usage.md
natocr/: __init__.py  __main__.py  cli.py  core.py  macos.py  models.py  windows.py
search/: search_index.json
tests/: test_cli.py  test_integration_macos.py  test_integration_windows.py  test_macos.py  test_models.py  test_ocr.py  test_package.py  test_windows.py
usage/: index.html
