[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "natocr"
version = "1.6.0"
description = "Native OCR library using platform-specific frameworks (macOS Vision, Windows Runtime OCR)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "alfredchiesa", email = "alfred.personal@icloud.com" }]
maintainers = [{ name = "alfredchiesa", email = "alfred.personal@icloud.com" }]
keywords = ["ocr", "text-recognition", "vision", "macos", "windows", "native"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "Pillow>=9.0.0",
    "numpy>=1.21",
    "pillow-heif>=0.13.0",
    # native backends are required, not optional - pip picks the right one per OS
    "pyobjc-framework-Vision>=11.1; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=11.1; sys_platform == 'darwin'",
    "pywin32>=311; sys_platform == 'win32'",
]

[project.optional-dependencies]
extras = [
    "pillow-jxl-plugin>=1.3.0",
    "imagecodecs>=2024.1.1",
    "djvulibre-python>=0.9.3",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-semantic-release>=8.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mkdocstrings[python]>=0.26",
]

[project.urls]
Homepage = "https://github.com/alfredchiesa/natocr"
Documentation = "https://alfredchiesa.github.io/natocr"
Repository = "https://github.com/alfredchiesa/natocr.git"
Issues = "https://github.com/alfredchiesa/natocr/issues"
Changelog = "https://github.com/alfredchiesa/natocr/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["natocr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=natocr",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["natocr"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["natocr/__init__.py:__version__"]
build_command = "pip3 install build && python3 -m build"
hvcs = "github"
major_on_zero = true
changelog_file = "CHANGELOG.md"
commit_author = "semantic-release <semantic-release@example.com>"

[tool.semantic_release.changelog]
exclude_merge_commits = true
exclude_commits = [
    "chore:",
    "docs:",
    "style:",
    "refactor:",
    "perf:",
    "test:",
    "ci:",
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "beta"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["natocr"]
